The following is a summary of the user-visible changes for each of
python-microscope releases.

Version 0.4.0 (upcoming)
------------------------

* New devices supported:

  * Coherent Obis laser.

* Changes to device ABCs:

  * Device:

    * The `Device._logger` attribute has been removed.  It is
      recommended to use a logger for the module.

* The device server and clients no longer force pickle protocol
  version 2.  If the client and server are running different Python
  versions it may be necessary to specify a version number.  This
  should be done on the side with the highest support version number
  by setting `Pyro4.config.PICKLE_PROTOCOL_VERSION`.


Version 0.3.0 (2019/11/07)
--------------------------

* Selected most important, backwards incompatible, changes:

  * `microscope.device`, function used to create a device definition,
    changed signature.  The arguments to the device constructor must
    now be passed as a dictionary.

  * Python 2 is no longer supported.

  * New requirements:

    * Python >= 3.5
    * hidapi

* New devices supported:

  * Andor (EM)CCD cameras (requires Andor's atmcd C library)
  * Aurox Clarity (requires hidapi Python package)
  * Imagine Optic Mirao 52-e deformable mirror (requires mirao52e C library)
  * Linkam Correlative Microscopy Stage (requires LinkamSDK C library)
  * Ximea cameras (requires Ximea's xiAPI Python package)

* Changes to device ABCs:

  * New ABC `ControllerDevice` for controller devices.

  * Laser devices:

    * New abstract methods:

      * `LaserDevice.get_min_power_mw`
      * `LaserDevice.is_alive`

    * `LaserDevice.set_power_mw` now clips the set value to the device
      actual range.  Previously, the behaviour was undefined and
      device specific.

  * Camera devices:

    * Added ROIs and binning support.

    * New abstract methods:

      * `CameraDevice._get_binning`
      * `CameraDevice._get_roi`
      * `CameraDevice._set_binning`
      * `CameraDevice._set_roi`
