@@ -7,6 +7,8 @@ Version 0.4.0 (upcoming)
 * New devices supported:
 
   * Coherent Obis laser.
+  * Linkam stage (requires LinkamSDK C library)
+  * Prior ProScan III controller
 
 * Changes to device ABCs:
 
